Fixed spacing between text and icon in navbar

--- a/src/app/admin/(logged_in)/adminLayout.css
+++ b/src/app/admin/(logged_in)/adminLayout.css
@@ -60,6 +60,9 @@
 @media (max-width: 900px) {
     .content {
         padding: 10px;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
     }
 
     .navbar {
